# stellar-backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  pyproject.toml
.cursor/rules/: global.mdc  stellar-architecture.mdc
scripts/: deploy-on-local.sh  run-backend-test.sh
stellar/: api.py  auth_context.py  config.py  dependencies.py  enums.py  logging_config.py  main.py  rate_limiter.py
stellar/account/: endpoints.py  schemas.py  service.py
stellar/attendance/: endpoints.py  schemas.py  service.py
stellar/dev/: endpoints.py  schemas.py  service.py
stellar/leave/: endpoints.py  schemas.py  service.py
stellar/profile/: endpoints.py  schemas.py  service.py
stellar/teams/: endpoints.py  schemas.py  service.py
tests/: test_account.py  test_profile.py
